<resources>
    <string name="app_name">SoloSphere Events</string>
    <string name="hello_world">Hello World!</string>
    <string name="tag_line">Your Social circle starts here!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_liked_event">Liked Event</string>
    <string name="title_chat">Chat</string>
    <string name="title_booked_events">Booked Events</string>
    <string name="title_profile">Profile</string>
    <string name="title_attendee">Attendees</string>
    <string name="title_no_attendee">No Attendees</string>
    <string name="title_view"><u>View</u></string>
    <string name="title_event_list">Events List</string>
    <string name="demo_location">Toronto,ON</string>
    <string name="search_events">Search all events...</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="see_all">See all</string>
    <string name="event_category_feed">My feed</string>
    <string name="title_login">Login</string>
    <string name="title_org_login">Organizer Login</string>
    <string name="subtitle_login">Please sign in to continue.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_type_message">Type a message</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="title_forgot_password">Forgot Password?</string>
    <string name="not_have_account">Don\'t have account?  <font color='#007BFF'><b>Sign Up</b></font></string>
    <string name="already_have_account">Already have account?  <font color='#007BFF'><b>Sign In</b></font></string>
    <string name="or_login_with">Or <font color='#007BFF'><b>Sign In</b></font> With</string>
    <string name="or_signup_with">Or <font color='#007BFF'><b>Sing Up</b></font> With</string>
    <string name="title_google">Google</string>
    <string name="title_create_account">Create Account</string>
    <string name="subtitle_sign_up">Please fill the input below here</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_con_password">Confirm Password</string>
    <string name="err_name">Please enter your full name!</string>
    <string name="err_event_name">Please enter event name!</string>
    <string name="err_event_desc">Please enter event name!</string>
    <string name="err_event_price">Please enter ticket price!</string>
    <string name="err_total_spots">Please enter total spots!</string>
    <string name="err_valid_event_price">Please enter valid Ticket Price!</string>
    <string name="err_valid_total_spots">Total spots should be only in digits!</string>
    <string name="err_event_location">Please enter event location!</string>
    <string name="err_event_city">Please enter event city!</string>
    <string name="err_event_state">Please enter event state!</string>
    <string name="err_name_length">Please enter at least 3 characters!</string>
    <string name="err_email">Please enter email address!</string>
    <string name="err_not_valid_email">Please enter a valid email address!</string>
    <string name="err_phone">Please enter phone number!</string>
    <string name="err_not_valid_phone">Please enter a valid phone number!</string>
    <string name="err_valid_password">Please enter the password with at least one digit, one lowercase, one uppercase and minimum 8 characters long!</string>
    <string name="err_passwords_do_not_match">Passwords do not match!</string>
    <string name="err_user_exist">User is already exist!</string>
    <string name="err_user_not_exist">User does not exist!</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="subtitle_reset_password">Please provide your account\'s email id for which you want to reset the password!</string>
    <string name="btn_continue">Continue</string>
    <string name="password_link_sent">The link has been sent to your email to reset the password!</string>
    <string name="title_skip">Skip</string>
    <string name="title_next">Next</string>
    <string name="lets_explore">Let\'s Explore</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_accept">Accept</string>
    <string name="title_user_name">User Name</string>
    <string name="title_travelling_solo">(Travelling Solo)</string>
    <string name="title_travelling_with">Travelling with</string>
    <string name="title_status">Status</string>
    <string name="title_recent_chats">Recent Chats</string>
    <string name="title_chats">Chats</string>
    <string name="title_chat_request">Chat Requests</string>
    <string name="title_send_request">Send Request</string>
    <string name="title_cancel_request">Cancel Request</string>
    <string name="status_friends">You\'re Friends!</string>
    <string name="status_already_received_req">This user already sent you request</string>
    <string name="status_sent_req">You have sent the request</string>
    <string name="status_received_req">You have received request</string>
    <string name="err_empty_view">Oops! list is empty!</string>
    <string name="err_no_chat">You haven\'t begin conversation yet!\nSend you first message today!</string>
    <string name="err_error_view">Something went wrong!\nplease try again</string>
    <string name="demo_price">$54.99</string>
    <string name="demo_event_date">31</string>
    <string name="demo_month">December</string>
    <string name="demo_day">Wednesday</string>
    <string name="demo_event_time">10:00 PM - 02:00 AM</string>
    <string name="about_event">About this event:\u0020</string>
    <string name="text_sample_message">Hi, How are you?</string>
    <string name="sample_time">10:00 AM, 20 Jan 2024</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="title_settings">Settings</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_edit_event">Edit Event</string>
    <string name="edit_profile_image">Edit Profile Picture</string>
    <string name="open_camera_tile">Open Camera</string>
    <string name="open_camera_question">Are you sure you want to open the camera?</string>
    <string name="title_delete">Delete</string>
    <string name="delete_question">Are you sure you want to remove your account?</string>
    <string name="title_log_out">Log Out</string>
    <string name="log_out_question">Are you sure you want to Log out?</string>
    <string name="support_text">We are Supporting you! Mail us at support@solosphereevents.ca</string>
    <string name="btn_update">Update</string>
    <string name="profile_updated">Hurrah! Profile has been updated successfully.</string>
    <string name="profile_not_updated">Oops! Error in Profile Update. Please try again.</string>
    <string name="about_event_details">This is about of event where all details of event will be listed.This is about of event where all details of event will be listed.This is about of event where all details of event will be listed.This is about of event where all details of event will be listed.</string>
    <string name="location">Location</string>
    <string name="demo_detailed_location">Waterloo Public Square</string>
    <string name="demo_address">75 King St S, Waterloo, ON N2J 1P2</string>
    <string name="open_in_map">Open in map</string>
    <string name="get_ticket">Get a Ticket</string>
    <string name="card_header">NFN CARD</string>
    <string name="card_number_sample">XXXX XXXX XXXX XXXX</string>
    <string name="card_validity_label">VALID UPTO</string>
    <string name="card_validity_sample">MM/YY</string>
    <string name="card_name_sample">Cardholder Name</string>
    <string name="title_payment">Payment</string>
    <string name="err_not_org">Oops! This email is not registers as an Organization.</string>
    <string name="title_event_name">Event Name</string>
    <string name="title_event_time">Event Time</string>
    <string name="title_event_location">Event Location</string>
    <string name="title_add_event">Add Event</string>
    <string name="title_select_event_image">Select Event Image</string>
    <string name="hint_event_desc">Event Description</string>
    <string name="btn_add">Add</string>
    <string name="title_event_address">Event Location</string>
    <string name="title_event_city">Event City</string>
    <string name="title_event_state">Event State</string>
    <string name="title_ticket_price">Ticket Price</string>
    <string name="hint_select_start_date">Start Date</string>
    <string name="hint_select_end_date">End Date</string>
    <string name="hint_select_start_time">Start Time</string>
    <string name="hint_select_end_time">End Time</string>
    <string name="err_event_image">Please Select the Event Image!</string>
    <string name="err_start_date">Please Select the Start Date!</string>
    <string name="err_start_time">Please Select the Start Time!</string>
    <string name="err_end_date">Please Select the End Date!</string>
    <string name="err_end_time">Please Select the End Time!</string>
    <string name="err_select_category">Please Select the Category!</string>
    <string name="err_event_not_added">Failed to add event:</string>
    <string name="event_added">Event added successfully!</string>
    <string name="event_updated">Event Updated successfully!</string>
    <string name="title_select_category">Select Category</string>
    <string name="title_total_spots">Total Spots</string>
    <string name="title_date">Date</string>
    <string name="demo_date">Mar 30 2024</string>
    <string name="title_time">Time</string>
    <string name="demo_time">3:00 am</string>
    <string name="title_seat">Seat</string>
    <string name="no_seat">No Seat</string>
    <string name="title_ticket">Ticket</string>
    <string name="demo_attendees">2</string>
    <string name="attendees_event">People attending this event</string>
    <string name="see_all_attendees">See All Attendees</string>
    <string name="no_events">Opps! Nothing is happening around you!</string>
    <string name="title_searched_events">Events</string>
    <string name="search_results">Search results for </string>
    <string name="no_liked_events">You haven\'t liked any events yet !</string>
    <string name="no_booked_events">You haven\'t purchase any tickets yet !</string>
    <string name="title_checkout">Checkout</string>
    <string name="demo_total_price">Total: $123.45</string>
    <string name="checkout">Checkout</string>
    <string name="str_you">You</string>
    <string name="title_date_time"><![CDATA[Date & Time]]></string>
    <string name="title_total_attendee">Total Attendees</string>
    <string name="title_validate_ticket">Validate Ticket</string>
    <string name="err_permission_denied">Permission Denied</string>
    <string name="err_scanner_stopped">To prevent memory leaks barcode scanner has been stopped</string>
    <string name="err_not_valid_ticket">Not Valid Ticket!</string>
    <string name="err_already_checked_in">Already Checked In!</string>
    <string name="successfully_checked_in">Successfully Checked In!</string>
    <string name="not_scanning_right_event">You are not scanning for the right Event!</string>
    <string name="no_attendee_yet">No one has booked events yet!</string>
    <string name="booked_ticket">Ticket has been booked successfully!</string>
    <string name="intro_text_1">Get ready to immerse yourself in a world of social connections and memorable experiences</string>
    <string name="intro_text_2">Find your next adventure and meet like-minded individuals with just a few taps</string>
</resources>