<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dim_25">

            <TextView
                style="@style/text_label_title_dark"
                android:layout_marginTop="@dimen/dim_15"
                android:text="@string/title_reset_password" />

            <TextView
                style="@style/text_label_light"
                android:layout_marginTop="@dimen/dim_5"
                android:text="@string/subtitle_reset_password"
                android:textColor="@color/colorGrayDark" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_25"
                android:hint="@string/hint_email"
                android:textColorHint="@color/colorHint"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    style="@style/editTextWithNoBg"
                    android:background="@drawable/bg_input"
                    android:drawableStart="@drawable/ic_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                style="@style/btn_filled_login"
                android:layout_width="@dimen/dim_160"
                android:layout_marginTop="@dimen/dim_20"
                android:text="@string/btn_continue"
                app:elevation="@dimen/dim_10" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/loadingView"
        layout="@layout/loading_view"
        android:visibility="gone" />

</RelativeLayout>
